--- a/src/components/grid/entity/EntityGrid/EntityGrid.css
+++ b/src/components/grid/entity/EntityGrid/EntityGrid.css
@@ -3,3 +3,10 @@
     width: 100%;
     box-sizing: border-box;
 }
+
+
+/*
+.ag-theme-balham .ag-pinned-right-cols-viewport {
+    overflow-y: scroll;
+}
+*/
