--- a/src/components/panel/Panel/Header/Header.css
+++ b/src/components/panel/Panel/Header/Header.css
@@ -1,12 +1,13 @@
 .rolext-panel-header {
     display: flex;
-    border: 1px solid #1890ff;
+    /* border: 1px solid #1890ff; */
     /*border-radius: 5px;*/
     border-color: #d9d9d9;
     border-bottom-width: 0;
     background-color: #1890ff;
     line-height: 20px;
-    padding: 4px 8px;
+    /* padding: 4px 8px; */
+    padding: 1px 0px;
     color: white;
 }
 
